a)	The spacing between the text and the header needs to be reduced by about 50%. See image. I removed some of the space in the header image to help with that, I also fixed the weird look on the relection. b)	The 5xpanel image is still showing up as the old one. c)	I included a larger resolution of the testimonial for Southbank. I don’t think we are going to get any more testimonials at this time. But we’ll wait and see. d)	The spacing at the top of the bundle should be about the same as the bottom. The 5 x Bundle should say “Recommended”.

--- a/public/styles/page1.scss
+++ b/public/styles/page1.scss
@@ -236,30 +236,14 @@
         }
 
         .details-1 {
-            margin: 50px auto 60px;
+            margin: 0 auto;
 
             @include respond-to(xs) {
                 margin: 15px auto 30px;
             }
 
-            @include respond-to(sm) {
-                margin: 10px auto 50px;
-            }
-
-            @include respond-to(md) {
-                margin: 50px auto 40px auto;
-            }
-
             @include respond-to(lg) {
-                margin: 25px auto 60px;
-            }
-
-            @include respond-to(xlg) {
-                margin: 35px auto;
-            }
-
-            @include respond-to(xxlg) {
-                margin: 10px auto 35px;
+                margin: 0 auto 15px;
             }
 
             small {
@@ -303,10 +287,10 @@
     }
 
     .part-2 {
-        background-color: $green;
+        // background-color: $green;
 
         @include respond-to(xs) {
-            background-color: $grey;
+            background-color: $grey !important;
         }
 
         .greetings-3 {
@@ -387,7 +371,7 @@
 
             img.menu-sub {
                 width: auto;
-                height: 160%;
+                height: 180%;
                 margin: auto;
 
                 @include respond-to(xs) {
